# manipulation

./: CMakeLists.txt  Manipulator.cpp  README.md
headfiles/: CommunicatinoBetween.h  Discretization.h  PackageData.h  SendOnTime.h  SerialCommunication.h  Spline.h  TrajectoryPlanning.h
projects/: CommunicatinoBetween.cpp  Discretization.cpp  PackageData.cpp  SendOnTime.cpp  SerialCommunication.cpp  Spline.cpp  TrajectoryPlanning.cpp
